Fix floating and overlap using z-index

--- a/arabic.css
+++ b/arabic.css
@@ -49,9 +49,9 @@ p, a {
 	font-family: 'Scheherazade', serif;
 	font-size: 28px;
 	direction: rtl;
-	padding: 3px;
 	text-align: justify;
 	word-spacing: 2px;
+  vertical-align: middle;
 }
 
 span:hover, a:hover{
@@ -67,35 +67,43 @@ span{
   background-color: black !important;
 }
 
+.ui-header .ui-title, .ui-footer .ui-title
+{
+  border: 0;
+  margin: inherit;
+  vertical-align: middle;
+}
 .headerSura {
   color: white;
-  z-index: 1;
-  margin-top: 22px;
-  padding-top: 22px;
+  z-index: 10005;
+  position: relative;
+  clear: both;
 }
+
+
 
 #bar {
     text-shadow: none;
+    clear: both;
     position:fixed;
+    float: top;
     background-color:red !important;
     width:100%;
     z-index: 1000;
     text-align: center;
     vertical-align: middle;
     color: black ;
-    font-size: 28px;
+    font-size: 18px;
 }
 
 .glyphicon {
     font-size: 30px;
     color: white;
     vertical-align: middle;
-    margin: 20,20,20,20px;
 }
 
 #toTop { 
   position: fixed; 
-  height: 7%;
   bottom: 0px;
   right: 0px;
   width: 100%;
